made it clearer whether you are viewing a subcircuit state/prototype

--- a/src/resources/logisim/en/gui.properties
+++ b/src/resources/logisim/en/gui.properties
@@ -13,6 +13,7 @@ cannotModifyCircuitError = This circuit cannot be modified.
 canvasWidthError = Incompatible widths
 canvasOscillationError = Oscillation apparent
 canvasExceptionError = Simulation halted by internal error
+canvasSubstateMessage = You are viewing the state of an embedded subcircuit.
 #
 # gui/Frame.java
 #
