simulation enabled toolbar icon

--- a/src/resources/logisim/en/gui.properties
+++ b/src/resources/logisim/en/gui.properties
@@ -103,6 +103,11 @@ projectViewSimulationTip = Show simulation hierarchy in explorer pane
 projectEditLayoutTip = Edit viewed circuit's layout
 projectEditAppearanceTip = Edit viewed circuit's subcircuit appearance
 #
+# gui/main/LayoutToolbarModel.java
+#
+simulateRunningText = Simulation Running
+simulateStoppedText = Simulation Stopped
+#
 # gui/main/ToolboxToolbarModel.java
 #
 projectAddCircuitTip = Add circuit
