ADDED: "clear" button to logging panel. only works when not logging to a file

--- a/src/resources/logisim/de/log.properties
+++ b/src/resources/logisim/de/log.properties
@@ -4,6 +4,7 @@
 logFrameTitle= Logisim: Log %s von %s
 logFrameMenuItem= %s: Log
 closeButton= Fenster schlie\u00dfen
+clearButton= L\u00f6schen
 #
 # SelectionPanel.java
 #
