--- a/src/resources/logisim/en/log.properties
+++ b/src/resources/logisim/en/log.properties
@@ -4,6 +4,7 @@
 logFrameTitle = Logisim: Log %s of %s
 logFrameMenuItem = %s: Log
 closeButton = Close Window
+clearButton = Clear
 #
 # SelectionPanel.java
 #
