--- a/src/resources/logisim/es/log.properties
+++ b/src/resources/logisim/es/log.properties
@@ -4,6 +4,7 @@
 logFrameTitle = Logisim: Registro %s de %s
 logFrameMenuItem = %s: Registro
 closeButton = Cerrar Ventana
+clearButton = Limpiar
 #
 # SelectionPanel.java
 #
