--- a/src/resources/logisim/pt/log.properties
+++ b/src/resources/logisim/pt/log.properties
@@ -4,6 +4,7 @@
 logFrameTitle= Logisim: Registro %s de %s
 logFrameMenuItem= %s: Registro
 closeButton= Fechar janela
+clearButton= Limpar
 #
 # SelectionPanel.java
 #
