--- a/src/resources/logisim/ru/log.properties
+++ b/src/resources/logisim/ru/log.properties
@@ -4,6 +4,7 @@
 logFrameTitle= Logisim: \u0436\u0443\u0440\u043d\u0430\u043b %s \u0438\u0437 %s
 logFrameMenuItem= %s: \u0436\u0443\u0440\u043d\u0430\u043b
 closeButton= \u0417\u0430\u043a\u0440\u044b\u0442\u044c \u043e\u043a\u043d\u043e
+clearButton= \u041e\u0447\u0438\u0441\u0442\u0438\u0442\u044c
 #
 # SelectionPanel.java
 #
