--- a/src/resources/logisim/el/log.properties
+++ b/src/resources/logisim/el/log.properties
@@ -4,6 +4,7 @@
 logFrameTitle= Logisim: \u039a\u03b1\u03c4\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae %s \u03b1\u03c0\u03cc %s
 logFrameMenuItem= %s: Log
 closeButton= \u039a\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf \u03a0\u03b1\u03c1\u03b1\u03b8\u03cd\u03c1\u03bf\u03c5
+clearButton= \u039a\u03b1\u03b8\u03b1\u03c1\u03b9\u03c3\u03bc\u03cc\u03c2
 #
 # SelectionPanel.java
 #
