ADDED: tooltip for unnamed subcircuit pins to TELL THEM TO NAME IT.

--- a/src/resources/logisim/en/circuit.properties
+++ b/src/resources/logisim/en/circuit.properties
@@ -26,6 +26,7 @@ unknownChangeAction = Change Circuit
 #
 subcircuitViewItem = View %s
 subcircuitCircuitTip = %s subcircuit
+subcircuitUnnamedTip = <This pin has no Label property set. Set it.>
 #
 # circuit/RadixOption.java
 #
