ADDED: "-loadrom name" and "-maxticks n" command-line options to load the contents of ROMs and set the maximum number of ticks to run the simulation, respectively

--- a/src/resources/logisim/en/start.properties
+++ b/src/resources/logisim/en/start.properties
@@ -7,10 +7,20 @@ ttyNeedsFileError = Using "-tty" requires a filename provided on command line.
 argTtyOption      = -tty format       run without graphical interface
 argSubOption      = -sub file1 file2  load file replacing library file1 with file2
 argLoadOption     = -load file        load image file into RAM (works with -tty only)
-loadNeedsFileError = Using "-load" requires a filename provided on command line.
-loadNeedsTtyError  = The "-load" option works only in conjunction with "-tty".
-loadMultipleError  = The "-load" option can be specified only once.
+argLoadRomOption  = -loadrom file     load image file into ROM (works with -tty only)
+argMaxTicksOption = -maxticks n       halt after n clock ticks (works with -tty only)
+loadNeedsFileError    = Using "-load" requires a filename provided on command line.
+loadRomNeedsFileError = Using "-loadrom" requires a filename provided on command line.
+loadNeedsTtyError     = The "-load" option works only in conjunction with "-tty".
+loadRomNeedsTtyError  = The "-loadrom" option works only in conjunction with "-tty".
+loadMultipleError     = The "-load" option can be specified only once.
+loadRomMultipleError  = The "-loadrom" option can be specified only once.
 ttyFormatError = -tty requires at least one of the following: halt, speed, stats, table, tty
+
+maxTicksNeedsArgError  = Using "-maxticks" requires a number of ticks provided on command line.
+maxTicksBadArgError    = "-maxticks" needs a number of ticks greater than 0.
+maxTicksBadArgFmtError = "-maxticks" needs a number of ticks.
+maxTicksNeedsTtyError  = The "-maxticks" option works only in conjunction with "-tty".
 
 argOneTemplateError = Only one template allowed.
 argUsage = usage: java %s [options] [filenames]
@@ -60,8 +70,9 @@ ttyLoadError = Error loading circuit file: %s
 ttySpeedMsg = %s Hz (%s ticks in %s milliseconds)
 loadNoRamError     = No RAM was found for the "-load" option.
 loadIoError        = Error while reading image file
-ttyNoTtyError = No TTY or Keyboard component was found. 
+ttyNoTtyError = No TTY or Keyboard component was found.
 ttyHaltReasonPin = halted due to halt pin
 ttyHaltReasonOscillation = halted due to detected oscillation
+ttyHaltReasonMaxTicks = halted due to reaching maximum number of ticks
 statsTotalWithout = TOTAL (without project's subcircuits)
 statsTotalWith = TOTAL (with subcircuits)
