--- a/src/resources/logisim/en/start.properties
+++ b/src/resources/logisim/en/start.properties
@@ -69,6 +69,7 @@ creditsRoleOriginal = Original Version
 ttyLoadError = Error loading circuit file: %s
 ttySpeedMsg = %s Hz (%s ticks in %s milliseconds)
 loadNoRamError     = No RAM was found for the "-load" option.
+loadNoRomError     = No ROM was found for the "-loadrom" option.
 loadIoError        = Error while reading image file
 ttyNoTtyError = No TTY or Keyboard component was found.
 ttyHaltReasonPin = halted due to halt pin
